Needs slightly more width in Chrome (at least with my settings, perhaps including minimum font size) to stop lines wrapping on outgoing messages.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -223,7 +223,7 @@ body
 	clear: both;
 	top: 0px;
 	padding-top: 100px;
-	width: 53em;
+	width: 54em;
 	margin: 0px auto 1.2em auto;
 	/* = 800px at default size? so 1em = 16px*/
 	text-align: left;
@@ -773,7 +773,7 @@ div.pagination { text-align: center; padding-top: 0.3em;}
 
 div.correspondence
 {
-	width: 37em;
+	width: 38em;
 	float: left;
 	padding: 0em 0.5em 0em 0.5em;
 	margin: 0 0 1em 0;
